--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,8 @@
 Flask==3.0.3
-pandas==2.3.3
+pandas==2.2.3
 selenium==4.25.0
 gspread==6.1.2
 google-auth==2.35.0
 openpyxl==3.1.5
-Flask-Cors-6.0.1
+flask-cors==6.0.1
+python-dotenv==1.0.0
