--- a/render.yaml
+++ b/render.yaml
@@ -13,7 +13,7 @@ services:
       echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list
       apt-get update
       apt-get install -y google-chrome-stable
-    startCommand: cd backend && python app.py
+    startCommand: gunicorn dataweb.wsgi:application
     envVars:
       - key: PYTHON_VERSION
         value: "3.11"
