--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,22 @@
 services:
   - type: web
     name: dataweb
-    # Xóa 'runtime', 'buildCommand', 'startCommand'
-    # Render sẽ sử dụng Dockerfile để thay thế
+    runtime: python
     plan: free
     region: singapore
+    buildCommand: |
+      cd backend && pip install -r requirements.txt
+      # Cài đặt Chrome và ChromeDriver
+      apt-get update
+      apt-get install -y wget gnupg
+      wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
+      echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list
+      apt-get update
+      apt-get install -y google-chrome-stable
+    startCommand: cd backend && python app.py
     envVars:
-      # Bạn không cần PYTHON_VERSION nữa vì đã định nghĩa trong Dockerfile
+      - key: PYTHON_VERSION
+        value: "3.11"
       - key: PORT
         value: 10000
       - key: RENDER
